--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -3,11 +3,10 @@
     text-align: center;
     justify-content: center;
     background: $clrSecondary12;
-    padding: 1em 0 1em 0;
+    padding: 2em 0 6em 0;
+    min-height: 50vh;
 
     .dashboard-container {
-        margin-bottom: 2em;
-
         h3 {
             margin-bottom: 1em;
         }
