--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -1,35 +1,72 @@
 .dashboard-page {
-    width: 100%;
     text-align: center;
     justify-content: center;
     background: $clrSecondary12;
-    padding: 2em 0 6em 0;
+    padding: 2em 1em 10em 1em;
     min-height: 50vh;
 
-    .dashboard-container {
-        h3 {
+    .no-results {
+        img {
+            max-width: 500px;
+            max-height: 400px;
+            margin: 1em auto;
+        }
+
+        p {
+            color: $clrPrimary2;
             margin-bottom: 1em;
+        }
+
+        a {
+            display: inline-block;
+            margin-top: 1em;
+            margin-bottom: 0.25em;
+            padding: 0.75em 1em;
+            background: $bgColor3;
+            color: #fff;
+            border-radius: 5px;
+            text-transform: uppercase;
+            font-family: 'macan-bold';
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s, transform 0.3s;
+
+            &:hover {
+                background-color: $bgColor5;
+                transform: translateY(-2px);
+            }
+
+            &:active {
+                transform: translateY(1px);
+            }
+        }
+    }
+
+    .dashboard-container {
+        margin: auto;
+        max-width: 900px;
+
+        h3 {
+            margin-bottom: 1.5em;
+            text-align: left;
         }
 
         .user-orders {
             width: 100%;
             box-sizing: border-box;
             font-family: 'macan-regular';
-            max-width: 900px;
-            margin: auto;
 
             table {
                 width: 100%;
                 border-collapse: collapse;
                 border: 1px solid $clrSecondary4;
+                background: $clrPrimary1;
             }
 
             th,
             td {
-                padding: 1em;
+                padding: 0.75em;
                 text-align: left;
                 border: 1px solid $clrSecondary4;
-                background: $clrPrimary1;
 
                 &:not(:last-child),
                 &:not(:first-child) {
@@ -58,18 +95,33 @@
                     }
                 }
 
-                img {
-                    width: 38px;
-                    height: 38px;
-                    object-fit: fill;
-                    border-radius: 50%;
+                &:nth-child(1) {
+                    padding: 0 0 0 0.75em;
+
+                    img {
+                        width: 50px;
+                        height: 60px;
+                        object-fit: cover;
+                    }
                 }
 
-                &:nth-child(2) {
+                &:nth-child(3) {
+                    padding: 0;
+
+                    img {
+                        width: 50px;
+                        height: 60px;
+                        object-fit: cover;
+                        border-radius: 50%;
+                    }
+                }
+
+                &:nth-child(4) {
                     border: none;
+                    padding: 1.25em 1em;
                 }
 
-                &:nth-child(6) {
+                &:nth-child(7) {
                     span {
                         padding: 0.95em 0.8em;
                         border-radius: 5px;
@@ -115,7 +167,7 @@
                 border: 1px solid $clrPrimary2;
                 border-radius: 5px;
                 box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-                margin: -15px 35px 0px -10px;
+                margin: -37.5px 30px 0px -60px;
 
                 button {
                     background: none;
