put them in correct order

--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -1,26 +1,26 @@
 // Colors
 $clrPrimary1: #fff;
-$clrPrimary2: #222325;
-$clrPrimary4: #333;
 $clrPrimary5: #555;
+$clrPrimary4: #333;
+$clrPrimary2: #222325;
 $clrPrimary3: #000;
 
 $clrSecondary0: #FAFAFA;
+$clrSecondary12: #f7f7f7;
 $clrSecondary1: #f5f5f5;
+$clrSecondary9: #f1fdf7;
+$clrSecondary14: #efeff0;
+$clrSecondary10: #e4e5e7;
+$clrSecondary13: #e0e0e0;  //not used
 $clrSecondary2: #dadbdd;
 $clrSecondary3: #ced1d6;
 $clrSecondary45: #c5c6c9;
 $clrSecondary4: #b5b6ba;
+$clrSecondary11: #95979d;
 $clrSecondary5: #74767e;
 $clrSecondary6: #62646a;
 $clrSecondary7: #575353;
 $clrSecondary8: #404145;
-$clrSecondary9: #f1fdf7;
-$clrSecondary10: #e4e5e7;
-$clrSecondary11: #95979d;
-$clrSecondary12: #f7f7f7;
-$clrSecondary13: #e0e0e0;
-$clrSecondary14: #efeff0;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
@@ -32,13 +32,13 @@ $bgColor7: #df6e6e;
 
 $clr1: #19a463;
 $clr2: #78cdd2;
-$clr3: #29bd49;
-$clr4: #d83b3b;
-$clr5: #0077ff;
-$clr6: #ffff54;
+$clr3: #29bd49;  //not used
+$clr4: #d83b3b;  //not used
+$clr5: #0077ff;  //not used
+$clr6: #ffff54;  //not used
 $clr7: #ffbe5b;
 
 // Breakpoints
-$mobile-breakpoint: 460px;
-$narrow-breakpoint: 720px;
-$normal-breakpoint: 960px;
+$mobile-breakpoint: 460px;  //not used
+$narrow-breakpoint: 720px;  //not used
+$normal-breakpoint: 960px;  //not used
