reviewbreakdown design in progress

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -22,6 +22,7 @@
 @import "cmps/GigNavbar";
 @import "cmps/AboutSeller";
 @import "cmps/GigDetailsAside";
+@import "cmps/ReviewBreakdown";
 @import "cmps/GigReviews";
 @import "cmps/ShareGigModal";
 
