reviewbreakdown finished yay

--- a/Frontend/src/assets/styles/cmps/_GigReviews.scss
+++ b/Frontend/src/assets/styles/cmps/_GigReviews.scss
@@ -36,9 +36,9 @@
     }
   }
 
-  @media (max-width: 600px) {
-    display: none;
-  }
+  // @media (max-width: 600px) {
+  //   display: none;
+  // }
 }
 
 .reviews {
