--- a/Frontend/src/assets/styles/cmps/_ReviewBreakdown.scss
+++ b/Frontend/src/assets/styles/cmps/_ReviewBreakdown.scss
@@ -15,6 +15,7 @@
     }
   }
   .breakdown-wrapper {
+    display: flex;
     margin-block-start: 0.75em;
     margin-block-end: 1.5em;
     padding: 0 0.5em;
@@ -59,9 +60,36 @@
           opacity: 0.7;
         }
 
-        .rate-count{
-            margin-inline-start: 0.625em;
-            font-weight: 400;
+        .rate-count {
+          margin-inline-start: 0.625em;
+          font-weight: 400;
+        }
+      }
+    }
+    .rating-breakdown {
+      display: flex;
+      flex-direction: column;
+      width: 50%;
+      margin-inline-start: 1em;
+      .title {
+        font-size: 1em;
+        font-weight: bold;
+        margin-block-end: 1em;
+      }
+      .rating-stat {
+        display: flex;
+        justify-content: space-between;
+        margin-block-end: 0.5em;
+        :first-child{
+            color: $clrSecondary11;
+        }
+        .star {
+          display: flex;
+          align-items: center;
+          font-weight: 400;
+          svg{
+            margin-inline-end: 0.25em;
+          }
         }
       }
     }
