dashboard now allows you to go to gigs and users

--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -119,6 +119,11 @@
                 &:nth-child(4) {
                     border: none;
                     padding: 1.25em 1em;
+
+                    a {
+                        display: flex;
+                        flex-direction: column;
+                    }
                 }
 
                 &:nth-child(7) {
