--- a/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
+++ b/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
@@ -113,6 +113,7 @@
 
       .price {
         font-size: 1.25rem;
+        font-weight: 700;
       }
     }
 
@@ -145,7 +146,7 @@
 
     .features {
       padding: 0;
-      color: $clrSecondary6;
+      color: $clrSecondary11;
       font-size: rem(14px);
       margin-block-end: rem(20px);
 
