--- a/Frontend/src/assets/styles/cmps/_UserPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_UserPreview.scss
@@ -78,6 +78,7 @@
 
         .rate-count {
           color: $clrSecondary5;
+          text-decoration: underline;
         }
       }
 
@@ -138,6 +139,7 @@
 
         .rate-count {
           color: $clrSecondary5;
+          text-decoration: underline;
         }
       }
 
