--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -68,12 +68,12 @@
 
   .home-companies-section {
     .companies {
-      @media (max-width: 1200px) {
-        gap: 3em;
+      @media (max-width: 900px) {
+        gap: 1.5em;
       }
 
-      @media (min-width: 1200px) {
-        gap: 4em;
+      @media (min-width: 900px) {
+        gap: 3.75em;
       }
     }
 
@@ -150,7 +150,7 @@
     .categories {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 1em;
+      // gap: 1em;
 
       @media (max-width: 900px) {
         grid-template-columns: repeat(3, 1fr);
