--- a/Frontend/src/assets/styles/views/_GigDetails.scss
+++ b/Frontend/src/assets/styles/views/_GigDetails.scss
@@ -55,6 +55,9 @@
     }
     .about-gig{
       margin: 1em 0;
+      h3{
+        font-weight: 700;
+      }
       .gig-description {
         margin: 1em 0;
       }
