--- a/Frontend/src/assets/styles/cmps/_Loader.scss
+++ b/Frontend/src/assets/styles/cmps/_Loader.scss
@@ -91,6 +91,7 @@
         align-items: center;
         height: 100%;
         justify-content: center;
+        margin: auto;
 
         img {
             width: 48px;
