--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -94,53 +94,65 @@
 
       .buyer-orders-dropdown {
         position: absolute;
-        top: 80%;
-        right: 10%;
+        top: 72px;
+        right: 7.5%;
         z-index: 10;
         background-color: $clrPrimary1;
         color: $clrSecondary6;
         border: 1px solid $clrSecondary2;
-        border-radius: 10px;
+        border-radius: 10px 0 0 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         min-width: 200px;
         max-width: 400px;
-        padding: 1em 0.5em;
         max-height: 250px;
-        overflow-y: scroll;
 
-        .buyer-order {
-          grid-template-columns: auto 1fr 1fr;
-          grid-template-rows: auto auto;
-          gap: 16px;
-          margin-bottom: 16px;
-          font-weight: 100;
+        .buyer-orders {
+          overflow-y: scroll;
+          padding: 1em 1em 0em 0.5em;
 
-          .order-image {
-            grid-column: 1 / 2;
-            grid-row: 1 / 3;
+          .buyer-order {
+            grid-template-columns: auto 1fr 1fr;
+            grid-template-rows: auto auto;
+            gap: 16px;
+            margin-bottom: 16px;
+            font-weight: 100;
+            border-bottom: 1px solid $clrSecondary2;
 
-            img {
-              width: 80px;
-              height: 60px;
-              object-fit: cover;
+            &:last-child {
+              border: none;
             }
-          }
 
-          .order-title {
-            grid-column: 2 / 4;
-            grid-row: 1 / 2;
-          }
+            &:not(:last-child):hover {
+              border-bottom: 1px solid $bgColor3;
+            }
 
-          .seller-name {
-            grid-column: 2 / 3;
-            grid-row: 2 / 3;
-            font-size: 14px;
-          }
+            .order-image {
+              grid-column: 1 / 2;
+              grid-row: 1 / 3;
 
-          .order-status {
-            grid-column: 3 / 4;
-            grid-row: 2 / 3;
-            text-align: right;
+              img {
+                width: 80px;
+                height: 60px;
+                object-fit: cover;
+              }
+            }
+
+            .order-title {
+              grid-column: 2 / 4;
+              grid-row: 1 / 2;
+            }
+
+            .seller-name {
+              grid-column: 2 / 3;
+              grid-row: 2 / 3;
+              font-size: 14px;
+            }
+
+            .order-status {
+              grid-column: 3 / 4;
+              grid-row: 2 / 3;
+              text-align: right;
+            }
           }
         }
 
@@ -153,7 +165,7 @@
           border-color: transparent transparent $clrSecondary2 transparent;
           position: absolute;
           top: -22px;
-          right: 10px;
+          right: 32px;
           z-index: -1;
         }
 
@@ -166,7 +178,7 @@
           border-color: transparent transparent $clrPrimary1 transparent;
           position: absolute;
           top: -20px;
-          right: 11px;
+          right: 33px;
           z-index: 0;
         }
       }
