--- a/Frontend/src/assets/styles/cmps/_PurchaseAside.scss
+++ b/Frontend/src/assets/styles/cmps/_PurchaseAside.scss
@@ -63,7 +63,7 @@
       .features {
         list-style: none;
         padding: 0;
-        color: $clrSecondary11;
+        color: $clrSecondary6;
 
         li {
           display: flex;
@@ -72,7 +72,7 @@
           padding: em(6px) 0;
 
           i {
-            margin-inline-end: 0.625em;
+            margin-inline-end: 9px;
           }
         }
       }
