--- a/Frontend/src/assets/styles/cmps/_ReviewBreakdown.scss
+++ b/Frontend/src/assets/styles/cmps/_ReviewBreakdown.scss
@@ -1,25 +1,30 @@
 .review-breakdown {
   color: $clrSecondary8;
   margin-block-start: 1em;
+
   .review-count {
     display: flex;
     gap: 0.75em;
     font-weight: 700;
+
     .stars {
       display: flex;
       align-items: center;
+
       svg {
         margin-inline-end: 0.25em;
         fill: $clrSecondary8;
       }
     }
   }
+
   .breakdown-wrapper {
     display: flex;
     margin-block-start: 0.75em;
     margin-block-end: 1.5em;
     padding: 0 0.5em;
     color: $clrPrimary2;
+
     .star-counts {
       width: 50%;
 
@@ -28,6 +33,7 @@
         align-items: center;
         justify-content: space-between;
         height: 2em;
+        cursor: pointer;
 
         &.no-count {
           color: $clrSecondary10;
@@ -37,6 +43,7 @@
           display: flex;
           padding: 0.375em;
           font-weight: bold;
+
           &:hover {
             background-color: $clrSecondary10;
           }
@@ -47,6 +54,7 @@
           height: 0.5em;
           background-color: $clrSecondary10;
           border-radius: 999px;
+
           .counter-meter {
             display: block;
             width: 50%;
@@ -55,39 +63,45 @@
             background-color: $clrPrimary2;
           }
         }
+
         &.no-count .counter-meter {
           background-color: $clrSecondary10;
           opacity: 0.7;
         }
 
         .rate-count {
-          margin-inline-start: 0.625em;
           font-weight: 400;
         }
       }
     }
+
     .rating-breakdown {
       display: flex;
       flex-direction: column;
       width: 50%;
       margin-inline-start: 1em;
+
       .title {
         font-size: 1em;
         font-weight: bold;
         margin-block-end: 1em;
       }
+
       .rating-stat {
         display: flex;
         justify-content: space-between;
         margin-block-end: 0.5em;
-        :first-child{
-            color: $clrSecondary11;
+
+        :first-child {
+          color: $clrSecondary11;
         }
+
         .star {
           display: flex;
           align-items: center;
           font-weight: 400;
-          svg{
+
+          svg {
             margin-inline-end: 0.25em;
           }
         }
