--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -108,7 +108,7 @@
 
         .buyer-orders {
           overflow-y: scroll;
-          padding: 1em 1em 0em 0.5em;
+          padding: 0.75em 0.75em 0em 0.75em;
 
           .buyer-order {
             grid-template-columns: auto 1fr 1fr;
@@ -131,6 +131,7 @@
               grid-row: 1 / 3;
 
               img {
+                margin-block-start: 0.375em;
                 width: 80px;
                 height: 60px;
                 object-fit: cover;
