--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -46,8 +46,45 @@
         max-width: 900px;
 
         h3 {
-            margin-bottom: 1.5em;
+            margin-bottom: 1em;
             text-align: left;
+            font-size: 20px;
+            font-family: 'macan-bold';
+            color: $clrSecondary6;
+        }
+
+        .seller-summary {
+            margin-bottom: 1em;
+
+            .financial-area {
+                .info-area {
+                    border: 1px solid $clrSecondary4;
+                    border-radius: 5px;
+                    padding: 1em 0em;
+                    justify-content: space-around;
+
+                    .info-cell {
+                        padding: 0em 1em;
+                        justify-content: space-between;
+                        max-width: 200px;
+                        gap: 0.5em;
+
+                        &:not(:last-child) {
+                            border-right: 1px solid $clrSecondary4;
+                        }
+
+                        h4 {
+                            color: #19a463;
+                        }
+
+                        p {
+                            font-size: 18px;
+                            font-family: 'macan-bold';
+                            color: $clrSecondary6;
+                        }
+                    }
+                }
+            }
         }
 
         .user-orders {
