--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -56,6 +56,57 @@
         .seller-summary {
             margin-bottom: 1em;
 
+            .general-area {
+                .info-area {
+                    grid-template-columns: 1fr 1fr 1fr;
+                    grid-template-rows: 1fr 1fr;
+                    border: 1px solid $clrSecondary4;
+                    border-radius: 5px;
+                    padding: 1em 0em;
+                    justify-content: space-around;
+
+                    .user-info {
+                        grid-column: 1;
+                        grid-row: 1 / -1;
+                        padding: 0em 1em;
+
+                        img {
+                            height: 100px;
+                            width: 80px;
+                            object-fit: cover;
+                            border-radius: 50%;
+                        }
+                    }
+
+                    .user-progress-one {
+                        grid-column: 2;
+                        grid-row: 1 / -1;
+                        padding: 0em 1em;
+                        justify-content: space-between;
+                    }
+
+                    .user-progress-two {
+                        grid-column: 3;
+                        grid-row: 1 / -1;
+                        padding: 0em 1em;
+                        justify-content: space-between;
+                    }
+
+                    .progress-bar {
+                        background-color: $clrSecondary6;
+                        border-radius: 4px;
+                        overflow: hidden;
+                    }
+
+                    .progress {
+                        background-color: #4caf50;
+                        height: 20px;
+                        border-radius: 4px;
+                        transition: width 0.3s ease-in-out;
+                    }
+                }
+            }
+
             .financial-area {
                 .info-area {
                     border: 1px solid $clrSecondary4;
