--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -57,8 +57,10 @@
             margin-bottom: 1.25em;
 
             .general-area {
+                max-width: 600px;
+
                 .info-area {
-                    grid-template-columns: 1fr 1fr 1fr;
+                    grid-template-columns: 1fr 1fr;
                     grid-template-rows: 1fr 1fr;
                     justify-content: space-around;
                     padding: 1em 0em;
@@ -66,28 +68,15 @@
                     border: 1px solid $clrSecondary4;
                     border-radius: 5px;
 
-                    .user-info {
-                        grid-column: 1;
-                        grid-row: 1 / -1;
-                        padding: 0em 1em;
-
-                        img {
-                            height: 100px;
-                            width: 80px;
-                            object-fit: cover;
-                            border-radius: 50%;
-                        }
-                    }
-
                     .user-progress-one {
-                        grid-column: 2;
+                        grid-column: 1;
                         grid-row: 1 / -1;
                         padding: 0em 1em;
                         justify-content: space-between;
                     }
 
                     .user-progress-two {
-                        grid-column: 3;
+                        grid-column: 2;
                         grid-row: 1 / -1;
                         padding: 0em 1em;
                         justify-content: space-between;
